smart ehr launch flow is working